# COMMOT

./: .readthedocs.yaml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
commot/: __init__.py
commot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
commot/_utils/: _clustering.py  _plotting.py
commot/plotting/: _plotting.py
commot/preprocessing/: __init__.py  _infer_spatial.py  _ligand_receptor_database.py
commot/preprocessing/_data/LRdatabase/CellPhoneDB_v4.0/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
commot/tools/: __init__.py  _downstream_analysis.py  _spatial_communication.py
docs/: conf.py  environment.yml  frontpage.md  index.rst  installation.md  requirements.txt  tutorials.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: commot.pl.plot_cell_communication.doctree  commot.pl.plot_cluster_communication_dotplot.doctree  commot.pl.plot_cluster_communication_network.doctree  commot.pl.plot_communication_dependent_genes.doctree  commot.pl.plot_communication_impact.doctree  commot.pp.filter_lr_database.doctree  commot.pp.infer_spatial_information.doctree  commot.pp.ligand_receptor_database.doctree  commot.tl.cluster_communication.doctree  commot.tl.cluster_communication_spatial_permutation.doctree  commot.tl.cluster_position.doctree  commot.tl.communication_deg_clustering.doctree  commot.tl.communication_deg_detection.doctree  commot.tl.communication_direction.doctree  commot.tl.communication_impact.doctree  commot.tl.communication_spatial_autocorrelation.doctree  commot.tl.group_cell_communication.doctree  commot.tl.group_cluster_communication.doctree  commot.tl.group_communication_direction.doctree  commot.tl.spatial_communication.doctree  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/api/: commot.pl.plot_cell_communication.rst.txt  commot.pl.plot_cluster_communication_dotplot.rst.txt  commot.pl.plot_cluster_communication_network.rst.txt  commot.pl.plot_communication_dependent_genes.rst.txt  commot.pl.plot_communication_impact.rst.txt  commot.pp.infer_spatial_information.rst.txt  commot.pp.ligand_receptor_database.rst.txt  commot.tl.communication_deg_clustering.rst.txt  commot.tl.communication_deg_detection.rst.txt  commot.tl.communication_direction.rst.txt  commot.tl.communication_spatial_autocorrelation.rst.txt  commot.tl.group_cell_communication.rst.txt  commot.tl.group_communication_direction.rst.txt  commot.tl.spatial_communication.rst.txt  index.rst.txt
docs/_build/html/api/: commot.pl.plot_cell_communication.html  commot.pl.plot_cluster_communication_dotplot.html  commot.pl.plot_cluster_communication_network.html  commot.pl.plot_communication_dependent_genes.html  commot.pl.plot_communication_impact.html  commot.pp.filter_lr_database.html  commot.pp.infer_spatial_information.html  commot.pp.ligand_receptor_database.html  commot.tl.cluster_communication.html  commot.tl.cluster_communication_spatial_permutation.html  commot.tl.cluster_position.html  commot.tl.communication_deg_clustering.html  commot.tl.communication_deg_detection.html  commot.tl.communication_direction.html  commot.tl.communication_impact.html  commot.tl.communication_spatial_autocorrelation.html  commot.tl.group_cell_communication.html  commot.tl.group_cluster_communication.html  commot.tl.group_communication_direction.html  commot.tl.spatial_communication.html  index.html
docs/api/: commot.pp.filter_lr_database.rst  commot.tl.cluster_communication.rst  commot.tl.cluster_communication_spatial_permutation.rst  commot.tl.cluster_position.rst  commot.tl.communication_impact.rst  commot.tl.group_cluster_communication.rst
docs/notebooks/: Basic_usage.ipynb  visium-mouse_brain.ipynb
tests/: test_cluster_communication.py  test_cluster_communication_spatial_permutation.py  test_communication_direction.py  test_spatial_communication.py
