[build-system]
requires = ["setuptools ~= 59.8", "cython ~= 0.29.24", "wheel"]

[project]
name = "commot"
description = "Cell-cell communications in space of transcriptomics data via collective optimal transport."
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
authors = [
    {name = "Zixuan Cang"},
]
maintainers = [
    {name = "Zixuan Cang", email = "cangzx@gmail.com"},
]
readme = {file = "README.md", content-type="text/markdown"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.7.6",
    "karateclub>=1.2.2",
    "leidenalg>=0.8.4",
    "networkx>=2.5.1",
    "numpy>=1.19.5",
    "pandas>=1.3.5",
    "plotly>=5.3.1",
    "pot>=0.8.0",
    "pysal>=2.6.0",
    "python-igraph>=0.9.9",
    "python-louvain>=0.15",
    "scanpy>=1.8.2",
    "scikit-learn>=1.0.2",
]
version = "0.0.2"

[project.optional-dependencies]
tradeSeq = [
    "anndata2ri==1.0.6",
    "rpy2==3.4.2",
]
doc = [
    "sphinx==5.0.0",
    "sphinx-autodoc-typehints==1.18.1",
    "sphinx-rtd-theme==1.0.0",
    "sphinx-rtd-size==0.2.0",
    "sphinxcontrib-applehelp==1.0.2",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "sphinx-mdinclude==0.5.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["commot*"]
exclude = ["tests*"]