[metadata]
name = commot
version = 0.0.3
description = Cell-cell communications inference for spatial transcriptomics data via optimal transport.
long_description_content_type = text/markdown
long_description = file: README.md
keywords = cell-cell communicaiton, spatial transcriptomics, optimal transport
license = MIT License
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    anndata>=0.7.6
    karateclub>=1.2.2
    leidenalg>=0.9.0
    networkx>=2.5.1
    numpy>=1.19.5
    pandas>=1.3.5
    plotly>=5.3.1
    pot>=0.8.0
    pysal>=2.6.0
    igraph    
    python-louvain>=0.15    
    scanpy>=1.8.2
    scikit-learn>=1.0.2
    importlib-metadata
python_requires = >=3.7

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
tradeSeq = 
    anndata2ri==1.0.6
    rpy2==3.4.2
docs = 
    sphinx==5.3.0
    sphinx-autodoc-typehints==1.18.1
    sphinx-rtd-theme==1.0.0
    sphinx-rtd-size==0.2.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sphinx-mdinclude==0.5.3
    nbsphinx==0.8.9
    ipykernel==6.16.0
    sphinx-gallery==0.11.1

[options.packages.find]
exclude =
    tests*
    docs*
    tutorials*
